--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
 
 				<div class="box alt container">
 					<section class="image fit">
-						<img src="webassets/images/Atris.PNG" alt="" /></a>
+						<img src="images/Atris.PNG" alt="" /></a>
 						<div class="content">
 							<h3>Inspiration</h3>
 							<p>The artists of Champlain college are among the hardest working, creative, and self destructive people I have ever met. They literally pour their souls into their work and It is both admirable and horrifying. I created this game in their honor.</p>
 						</div>
 					</section>
 					<section class="image fit">
-						<img src="webassets/images/Watering.JPG" alt="" /></a>
+						<img src="images/Watering.JPG" alt="" /></a>
 						<div class="content">
 							<h3>Method</h3>
 							<p>This project has birthed an inumerable amount of ideas in my mind and I have had so much fun running with all of them and utilizing my unity experience. The main goal of this project was to experiment with "finding the fun" in a simple game idea. Starting from scratch always helps to solidify your knowledge.</p>
 						</div>
 					</section>
 					<section class="image fit">
-						<img src="webassets/images/Desk.JPG" alt="" /></a>
+						<img src="images/Desk.JPG" alt="" /></a>
 						<div class="content">
 							<h3>Outcome</h3>
 							<p>After 4 short weeks developing this game, I can truly say that I had a lot of fun using my skills to make parody game that has personal signifigance. The architecture is clean, the game runs smoothly, and most importantly, it is quite fun.</p>
