--- a/index.html
+++ b/index.html
@@ -42,21 +42,31 @@
 						<img src="images/Atris.PNG" alt="" /></a>
 						<div class="content">
 							<h3>Inspiration</h3>
-							<p>The artists of Champlain college are among the hardest working, creative, and self destructive people I have ever met. They literally pour their souls into their work and It is both admirable and horrifying. I created this game in their honor.</p>
+							<p>The artists of Champlain college are among the hardest working, creative, and at times self destructive people I have ever met.
+								 They literally pour their souls into their work and It is both admirable and horrifying. 
+								 I created this game in their honor.
+								</p>
 						</div>
 					</section>
 					<section class="image fit">
 						<img src="images/Watering.JPG" alt="" /></a>
 						<div class="content">
 							<h3>Method</h3>
-							<p>This project has birthed an inumerable amount of ideas in my mind and I have had so much fun running with all of them and utilizing my unity experience. The main goal of this project was to experiment with "finding the fun" in a simple game idea. Starting from scratch always helps to solidify your knowledge.</p>
+							<p> 
+								This project was made in Unity with a simple goal in mind: make a game, and make it fun. 
+								I demonstrate my ability to rapidly create game mechanics and have an enjoyable end product. 
+								The main goal of this project was to experiment with "finding the fun" in a simple 3D game.
+							</p>
 						</div>
 					</section>
 					<section class="image fit">
 						<img src="images/Desk.JPG" alt="" /></a>
 						<div class="content">
 							<h3>Outcome</h3>
-							<p>After 4 short weeks developing this game, I can truly say that I had a lot of fun using my skills to make parody game that has personal signifigance. The architecture is clean, the game runs smoothly, and most importantly, it is quite fun.</p>
+							<p>After 4 short weeks developing this game, I can truly say that I had 
+								a lot of fun using my skills to make parody game that has personal signifigance. 
+								The architecture is clean, the game runs smoothly, and most importantly, it is quite fun.
+							</p>
 						</div>
 					</section>
 				</div>
@@ -64,7 +74,7 @@
 				
 				<footer class="major container medium">
 					<h3>A labor of love</h3>
-					<p>I made this project for the joy of creating something for me and my friends. </p>
+					<p>I made this project for the joy of creating something for me and my friends. The greatest joy of developing this game was seeing my friends react to this comical take on how I see the artist lab. </p>
 					<p>Practice and professional development are just a plus.</p>
 					<ul class="actions special">
 						
